// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneContainer should render properly 1`] = `
<div
  className="scene-container"
>
  <Player />
  <Scene
    fullscreen={false}
  />
</div>
`;

exports[`SceneContainer should render properly if fullscreen 1`] = `
<div
  className="scene-container fullscreen"
>
  <Player />
  <Scene
    fullscreen={true}
  />
</div>
`;
